Introduce *Dto classes and fix and simplify ServiceIntegrationTests